--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
   "author": "ansromanov (ansromanov@gmail.com)",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
+    "browserslist": "^1.7.7",
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-imagemin": "^1.0.1",
     "grunt-contrib-pug": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-postcss": "^0.8.0",
     "grunt-sass": "^2.0.0",
-    "imagemin-mozjpeg": "^6.0.0"
-  }
+    "imagemin-mozjpeg": "^6.0.0",
+    "stylelint": "^7.9.0",
+    "stylelint-config-standard": "^16.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
